# transform-gizmo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cranky.toml  LICENSE  LICENSE-MIT  README.md  rust-toolchain  rust-toolchain.toml
.github/workflows/: rust.yml
crates/transform-gizmo/: Cargo.toml
crates/transform-gizmo-bevy/: Cargo.toml
crates/transform-gizmo-bevy/examples/: bevy.rs  bevy_minimal.rs  ui_blocked_gizmo.rs  wip-bevy_multicam.rs
crates/transform-gizmo-bevy/src/: gizmo.wgsl  lib.rs  mouse_interact.rs  picking.rs  prelude.rs  render.rs
crates/transform-gizmo-demo/: Cargo.toml  index.html
crates/transform-gizmo-demo/src/: camera.rs  gui.rs  main.rs  picking.rs  scene.rs
crates/transform-gizmo-egui/: Cargo.toml
crates/transform-gizmo-egui/examples/: egui.rs
crates/transform-gizmo-egui/src/: lib.rs  prelude.rs
crates/transform-gizmo/src/: config.rs  gizmo.rs  lib.rs  math.rs  painter.rs  prelude.rs  shape.rs  subgizmo.rs
crates/transform-gizmo/src/subgizmo/: arcball.rs  common.rs  rotation.rs  scale.rs  translation.rs
demo/: Cargo.toml  Trunk.toml  build_web.sh  index.html
demo/src/: camera.rs  main.rs
docs/: bevy-example.js  egui-gizmo-demo-e8a6fd516154013d8897edb476252391ad00bd943b1977cc1c389555a26e6ed21341a1d68a408dca4c8fb7b79aff4505.js  egui-gizmo-demo.js  index.html
examples/bevy/: Cargo.toml  Trunk.toml  index.html
examples/bevy/src/: camera.rs  grid.rs  gui.rs  main.rs  picking.rs  scene.rs
examples/egui/: Cargo.toml
examples/egui/src/: main.rs
scripts/: build_demo_web.sh
src/: lib.rs  math.rs  painter.rs  rotation.rs  scale.rs  subgizmo.rs  translation.rs
src/subgizmo/: arcball.rs  common.rs  rotation.rs  scale.rs  translation.rs
