[package]
name = "egui-gizmo-demo"
version = "0.2.0"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"

license = "MIT"

[dependencies]
egui = "0.26.1"
egui-gizmo = { path = ".." }

[dependencies.bevy]
version = "0.12.1"

[dependencies.bevy_math]
version = "0.12.1"
features = ["mint"]

[dependencies.bevy_egui]
git = "https://github.com/ThomasAlban/bevy_egui.git"
rev = "165fe4570c7b2c2c38d5f3ee49cdbe01fa5e752c"

[dependencies.bevy_infinite_grid]
git = "https://github.com/pcwalton/bevy_infinite_grid.git"
rev = "c752a23063b2b05163e307889eb276d6574115ab"

[lints]
workspace = true
