[package]
name = "egui-gizmo-demo"
version = "0.2.0"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"

license = "MIT"

[dependencies]
bevy = "0.13"
bevy_egui = "0.25.0"
egui = "0.26.2"
egui-gizmo = { path = ".." }

[dependencies.bevy_math]
version = "0.12.1"
features = ["mint"]

[lints]
workspace = true
