[package]
name = "egui-gizmo-demo"
version = "0.2.0"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
edition = "2021"

license = "MIT"

[dependencies]
bevy = "0.13"
egui = "0.27.2"
egui-gizmo = { path = ".." }

[dependencies.bevy_infinite_grid]
git = "https://github.com/XYCaptain/bevy_infinite_grid.git"
rev = "1e5259a52a7dfaca65402c2c57c1d81c2bc443e9"

[dependencies.bevy_egui]
git = "https://github.com/mvlabat/bevy_egui.git"
rev = "51fa9176cb636c27b792004af410955f946e808e"


[dependencies.bevy_math]
version = "0.13.1"
features = ["mint"]

[lints]
workspace = true
