[package]
name = "transform-gizmo-bevy"
description = "bevy integration for transform-gizmo"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
transform-gizmo.workspace = true
mint.workspace = true
bevy = "0.13"
bevy_math = { version = "0.13", features = ["mint"] }

[lints]
workspace = true
