[package]
name = "transform-gizmo-bevy"
description = "bevy integration for transform-gizmo"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
transform-gizmo.workspace = true
mint.workspace = true
bevy.workspace = true
bevy_math.workspace = true

[lints]
workspace = true
