[package]
name = "transform-gizmo-demo"
description = "demo app for transform-gizmo"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
transform-gizmo-bevy.workspace = true

bevy.workspace = true
bevy_egui_next = { git = "https://github.com/bfleischhacker/bevy_egui_next.git", rev = "935904398c77ea7195a0a59a7cf05be030c4d2eb" }
bevy_infinite_grid = { git = "https://github.com/XYCaptain/bevy_infinite_grid.git", rev = "1e5259a52a7dfaca65402c2c57c1d81c2bc443e9" }
bevy_mod_picking = "0.18.0"
bevy_mod_outline = "0.7.0"

[lints]
workspace = true
