[package]
name = "transform-gizmo-egui"
description = "egui integration for transform-gizmo"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
transform-gizmo.workspace = true
egui.workspace = true

[dev-dependencies]
eframe.workspace = true

[lints]
workspace = true
