[package]
name = "bevy-example"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
transform-gizmo-bevy.workspace = true

bevy.workspace = true
bevy_infinite_grid = "0.17"
bevy_mod_outline = { git = "https://github.com/komadori/bevy_mod_outline.git", rev = "9b509abe41ac1d2b882adaf63855e24a20ced3ff" }

[dependencies.bevy_egui]
version = "0.38"
features = ["open_url", "default_fonts", "render"]
default-features = false

[lints]
workspace = true
