[package]
name = "bevy-example"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
transform-gizmo-bevy.workspace = true

bevy.workspace = true
bevy_infinite_grid = "0.18.0"
bevy_mod_outline = "0.12.0"

[dependencies.bevy_egui]
version = "0.39.0"
features = ["open_url", "default_fonts", "render"]
default-features = false

[lints]
workspace = true
